--- a/promo-shock/src/shared/styles/vars.scss
+++ b/promo-shock/src/shared/styles/vars.scss
@@ -1,6 +1,10 @@
 $mainPink: #F759AB;
+$fadedPink: #FFADD2;
 $mainCyan: #13C2C2;
 $mainBackground: #F0F0F0;
+$goldenPurple: #9254DE;
+$mainError: #FF4D4F;
 
 $textPrimary: #262626;
 $textSecondary: #FFFFFF;
+$textSubtitle: rgba(0, 0, 0, 0.45);
