--- a/promo-shock/src/shared/styles/vars.scss
+++ b/promo-shock/src/shared/styles/vars.scss
@@ -3,8 +3,11 @@ $fadedPink: #FFADD2;
 $mainCyan: #13C2C2;
 $mainBackground: #F0F0F0;
 $goldenPurple: #9254DE;
+$fadedPurple: #F9F0FF;
 $mainError: #FF4D4F;
+$gray7: #8C8C8C;
 
 $textPrimary: #262626;
 $textSecondary: #FFFFFF;
 $textSubtitle: rgba(0, 0, 0, 0.45);
+$textSunriseYellow: #FADB14;
