--- a/promo-shock/src/layouts/base-layout/base-layout.module.scss
+++ b/promo-shock/src/layouts/base-layout/base-layout.module.scss
@@ -7,9 +7,6 @@
 }
 
 .header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   padding: 16px 60px;
   background: white;
   position: relative;
@@ -26,6 +23,15 @@
   }
 }
 
+.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
 .mirror {
   padding-top: 120px;
   &::after {
@@ -37,4 +43,16 @@
 
 .gutterBottom {
   margin-top: -50px;
+}
+
+.rightPart {
+  display: flex;
+  gap: 32px;
+  align-items: center;
+}
+
+.nav {
+  display: flex;
+  gap: 8px;
+  align-items: center;
 }
