--- a/promo-shock/src/shared/styles/vars.scss
+++ b/promo-shock/src/shared/styles/vars.scss
@@ -1,9 +1,13 @@
 $mainPink: #F759AB;
+$boldPink: #EB2F96;
 $fadedPink: #FFADD2;
+$dustRed: #FFF1F0;
 $mainCyan: #13C2C2;
+$boldCyan: #088d8d;
 $mainBackground: #F0F0F0;
 $goldenPurple: #9254DE;
 $fadedPurple: #F9F0FF;
+$fadedBoldPurple: #eed6ff;
 $mainError: #FF4D4F;
 $gray7: #8C8C8C;
 
