--- a/promo-shock/src/layouts/base-layout/base-layout.module.scss
+++ b/promo-shock/src/layouts/base-layout/base-layout.module.scss
@@ -1,9 +1,12 @@
 @import 'src/shared/styles/vars.scss';
 
 .root {
+  display: grid;
+  grid-template-rows: max-content 1fr max-content;
   background-image: url('./img/layout-background.png');
   background-repeat: repeat;
   background-color: $mainBackground;
+  min-height: 100vh;
 }
 
 .header {
