--- a/promo-shock/src/ui-kit/button/button.module.scss
+++ b/promo-shock/src/ui-kit/button/button.module.scss
@@ -24,12 +24,22 @@
     &:hover {
       background-color: $boldPink !important;
     }
+
+    &.disabled {
+      color: $textDisabled !important;
+      background-color: $backgroundDisabled !important;
+    }
   }
   
   &_secondary {
     background-color: $mainCyan !important;
     &:hover {
       background-color: $boldCyan !important;
+    }
+
+    &.disabled {
+      color: #FFF !important;
+      background-color: $textDisabled !important;
     }
   }
 
@@ -41,11 +51,34 @@
       background-color: $fadedBoldPurple !important;
       border: 2px solid $goldenPurple !important;
     }
+
+    &.disabled {
+      color: $textDisabled !important;
+      background-color: $backgroundDisabled !important;
+      border: 2px solid $textDisabled !important;
+    }
+  }
+
+  &_quaternary {
+    color: $mainPink !important;
+    border: 2px solid $mainPink !important;
+    background-color: $fadedPurple !important;
+
+    &:hover {
+      border: 2px solid $mainPink !important;
+      background-color: $fadedBoldPink !important;
+    }
+
+    &.disabled {
+      color: $textDisabled !important;
+      background-color: $backgroundDisabled !important;
+      border: 2px solid $textDisabled !important;
+    }
   }
 }
 
 .size {
-  &_default {
+  &_medium {
     font-size: 20px !important;
     padding: 6px 24px !important;
   }
@@ -60,4 +93,13 @@
     padding: 22px 24px !important;
     min-width: 480px;
   }
+
+  &_big {
+    padding: 13px 32px !important;
+    font-size: 28px !important;
+  }
+}
+
+.disabled {
+  pointer-events: none; 
 }
