--- a/promo-shock/src/ui-kit/form/field.module.scss
+++ b/promo-shock/src/ui-kit/form/field.module.scss
@@ -142,3 +142,9 @@
     padding: 6px 12px !important;
   }
 }
+
+.timepicker {
+  cursor: text;
+  padding-top: 5px !important;
+  padding-bottom: 5px !important;
+}
