--- a/promo-shock/src/ui-kit/form/field.module.scss
+++ b/promo-shock/src/ui-kit/form/field.module.scss
@@ -56,6 +56,10 @@
   border-radius: 2px !important;
   background-color: white !important;
 
+  & > span {
+    position: relative !important;
+  }
+
   &:global(.ant-picker),
   &:global(.ant-picker-range) {
     width: max-content !important;
