--- a/promo-shock/src/ui-kit/form/field.module.scss
+++ b/promo-shock/src/ui-kit/form/field.module.scss
@@ -55,9 +55,11 @@
   border: 1px solid #D9D9D9 !important;
   border-radius: 2px !important;
   background-color: white !important;
+  align-items: center !important;
 
   & > span {
     position: relative !important;
+    margin-inline-end: unset !important;
   }
 
   &:global(.ant-picker),
@@ -76,7 +78,7 @@
     }
 
     & :global(.ant-picker-input) {
-      width: 107px !important;
+      width: 110px !important;
       padding: 6px 12px !important;
       border: 1px solid #D9D9D9 !important;
       border-radius: 2px !important;  
@@ -140,6 +142,7 @@
 
 .textarea {
   padding: 0 !important;
+  align-items: unset !important;
 
   > textarea {
     min-height: 106px !important;
