--- a/promo-shock/src/templates/about/about.module.scss
+++ b/promo-shock/src/templates/about/about.module.scss
@@ -6,9 +6,10 @@
   align-items: center;
   gap: 96px;
   position: relative;
-  overflow-x: hidden;
   z-index: 1;
-  max-width: 1140px;
+  width: 100%;
+  max-width: 1440px;
+  padding: 0px 120px;
   margin: 0 auto;
 }
 
@@ -27,30 +28,138 @@
 
 .h3 {
   @include h3;
-
   color: $mainPink;
+  text-align: center;
+}
+
+.h4 {
+  @include h4;
+  text-align: center;
 }
 
 .h3Team {
   @include h3;
+  text-align: center;
+}
+
+.subtitle {
+  @include h4;
+  text-align: center;
 }
 
 .article {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 24px;
   font-family: var(--font-georama);
   font-size: 20px;
   line-height: 32px;
-  align-items: flex-start;
   width: 100%;
 }
 
 .cardList {
   margin-top: 32px;
-  display: flex;
-  justify-content: space-between;
-  gap: 10px;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: max-content;
+  gap: 30px;
   width: 100%;
+}
+
+.cardList_last {
+  grid-column: 1/-1;
+  display: grid;
+  grid-template-columns: subgrid;
+}
+
+.banner {
+  position: relative;
+  height: 100%;
+  display: grid;
+  position: relative;
+  width: calc(100% + 30px) !important;
+  left: -30px;
+  grid-column: span 2;
+  > * {
+    grid-row: 1;
+    grid-column: 1;
+  }
+}
+
+.banner_content {
+  padding: 66px 40px 66px 114px;
+}
+
+.banner_title {
+  @include h3;
+  display: inline-block;
+  color: #9254DE;
+  margin-bottom: 40px;
+}
+
+.banner_description {
+  font-family: var(--font-georama);
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 32px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #141414;
+}
+
+.about_list_item {
+  position: relative;
+  display: grid;
+  grid-template-columns: 360px 1fr;
+  column-gap: 72px;
+}
+
+.about_list_title {
+  @include h4;
+  color: #F759AB;
+  grid-column: 1;
+  position: sticky;
+  top: 350px;
+  bottom: 350px;
+  height: max-content;
+}
+
+.about_list_content {
+  grid-column: 2;
+  height: max-content;
+}
+
+.text_content {
+  display: grid;
+  row-gap: 24px;
+  padding: 40px 44px 32px;
+  border: 2px dashed #D9D9D9;
+  background: #FFFFFF;
+  border-radius: 16px;
+  margin-bottom: 4px;
+
+  p {
+    font-family: var(--font-georama);
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 32px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #141414;
+  }
+}
+
+.disclaimer {
+  padding: 32px 44px;
+  font-family: var(--font-georama);
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 32px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: #FFF;
+  background: #9254DE;
+  border-radius: 16px;
+  border: 2px dashed #D3ADF7;
 }
