--- a/promo-shock/src/templates/landing/landing.module.scss
+++ b/promo-shock/src/templates/landing/landing.module.scss
@@ -28,8 +28,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 56px;
   z-index: 1;
+}
+
+.description {
+  min-height: 73px;
+  max-width: 960px;
+  text-align: center;
+  font-family: var(--font-georama);
+  font-size: 20px;
+  margin-top: 40px;
 }
 
 .panels {
@@ -39,8 +47,15 @@
   gap: 40px;
   flex-wrap: nowrap;
   font-weight: 700;
-  font-size: 24px;
+  font-size: 20px;
   font-family: var(--font-georama);
+  margin-top: 32px;
+  margin-bottom: 56px;
+}
+
+.leftPanel {
+  min-width: 350px;
+  text-align: right;
 }
 
 .middlePanel {
@@ -50,7 +65,6 @@
 
 .panel {
   min-width: 350px;
-  text-align: center;
 }
 
 .upcoming {
