feat: masks for date and time fields

--- a/promo-shock/src/ui-kit/form/field.module.scss
+++ b/promo-shock/src/ui-kit/form/field.module.scss
@@ -194,6 +194,7 @@
     font-size: 14px !important;
     font-weight: 400 !important;
     line-height: 20px !important;
+    color: #FFF !important;
     transition: background-color 0.3s !important;
 
     &:hover {
