--- a/promo-shock/src/ui-kit/form/field.module.scss
+++ b/promo-shock/src/ui-kit/form/field.module.scss
@@ -185,20 +185,28 @@
   }
 
   & :global(.ant-picker-ok) button {
+    display: inline-flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+    border-radius: 16px !important;
     width: max-content !important;
     height: max-content !important;
     padding: 4px 12px !important;
-    border-radius: 16px !important;
-    background-color: #F759AB !important;
-    font-family: inherit !important;
+    font-family: var(--font-w95fa) !important;
     font-size: 14px !important;
     font-weight: 400 !important;
     line-height: 20px !important;
+    transition: border-color 0.3s, color 0.3s, background-color 0.3s !important;
+    background-color: #F759AB !important;
     color: #FFF !important;
     transition: background-color 0.3s !important;
-
     &:hover {
-      background-color: #FFADD2 !important;
+      background-color: #EB2F96 !important;
+    }
+
+    &.disabled {
+      color: #BFBFBF !important;
+      background-color: #F0F0F0 !important;
     }
   }
 }
