update: empty state message to CardList and Streams components

--- a/promo-shock/src/components/card-list/card-list.module.scss
+++ b/promo-shock/src/components/card-list/card-list.module.scss
@@ -18,3 +18,12 @@
   gap: 56px 36px;
   width: 100%;
 }
+
+.caption {
+  display: inline-block;
+  margin-bottom: 84px;
+  font-family: var(--font-georama);
+  font-size: 20px;
+  line-height: 32px;
+  text-align: center;
+}
