update: styles and messages in card-list and templates

--- a/promo-shock/src/components/card-list/card-list.module.scss
+++ b/promo-shock/src/components/card-list/card-list.module.scss
@@ -26,4 +26,14 @@
   font-size: 20px;
   line-height: 32px;
   text-align: center;
+
+  a {
+    color: #9254DE;
+    cursor: pointer;
+    transition: color 0.3s;
+
+    &:hover {
+      color: #F759AB;
+    }
+  }
 }
